
2008-05-06 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* minor changes to histograms
	* default energy range set to maximum
	* Tag as TrigT1CaloMonitoring-00-03-06

2008-05-02  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Add more expert plots to CPMSimBSMon
        * Reduce number of plots in TrigT1CaloCpmMonTool
        * Tag as TrigT1CaloMonitoring-00-03-05

2008-04-22  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Fix vector initialisation bug at run change in
          TrigT1CaloCpmMonTool
        * Tag as TrigT1CaloMonitoring-00-03-04

2008-04-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Update TrigT1CaloMonitoring_forRecExCommission.py 
          for CPMSimBSMon
        * Tag as TrigT1CaloMonitoring-00-03-03

2008-04-02 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Change of DataType in src and option files
	* Tag as TrigT1CaloMonitoring-00-03-02

2008-03-20  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Changes to CP tools: change plots to float instead of double,
          move all plots except overall summaries from shift to expert,
          reorganise directories of expert error plots so the directory
          names correspond with the bin labels on the overall summary
          plot.
        * Tag as TrigT1CaloMonitoring-00-03-01

2008-02-20  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * new tool for CP data-simulation comparisons
        * needs TrigT1CaloTools-01-02-00 or later
        * Tag as TrigT1CaloMonitoring-00-03-00

2007-12-14  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
        * JEPTransPerfMon, JEMMon: remove depedency to TrigT1CaloSim
        * Tag as TrigT1CaloMonitoring-00-02-02


2008-02-10  Alan Watson <Alan.Watson@cern.ch>
        * JEPTransPerfMon, JEMMon: correct locations of EnergyTrigger.h,
          JetElementMaker.h
        * Tag as TrigT1CaloMonitoring-00-02-01 

2008-02-08  Alan Watson <Alan.Watson@cern.ch>
        * Change jobOptions to load simulation algorithms from 