@@ -1,3 +1,6 @@
+2008-05-07  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Minor tweaks to CPM histograms
+        * Tag as TrigT1CaloMonitoring-00-03-08
 
 2008-05-06 Andrea Neusiedl <andrea.neusiedl@cern.ch>
 	* minor changes to histograms
